--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/codingnepal -->
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>Animated Login Form | CodingNepal</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Infis Maturita</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
-    <div class="center">
-      <h1>Login</h1>
-      <form method="post">
-        <div class="txt_field">
-          <input type="text" required>
-          <span></span>
-          <label>Username</label>
-        </div>
-        <div class="txt_field">
-          <input type="password" required>
-          <span></span>
-          <label>Password</label>
-        </div>
-        <div class="forgotpass"></div>
-        <input type="submit" value="Login">
-        <div class="signup_link">
-        </div>
-      </form>
+    <h1 id="header">Infis Maturita</h1>
+    <div class="categories">
+      <div class="category" onclick="showCategory('category1')">LIT</div>
+      <div class="category" onclick="showCategory('category2')">IT</div>
+      <div class="category" onclick="showCategory('category3')">PSKV</div>
     </div>
-
+    <div class="category1 files">
+	  <p class="file-pdf">PDF</p>
+	  <a href="literatura/pdf/1. Romeo a Julie.pdf" class="file-literatura">1. Romeo a Julie</a>      
+      <a href="#" class="file-literatura">File 2</a>
+      <a href="#" class="file-literatura">File 3</a>
+	  <p class="file-docx">DOCX</p>
+	  <a href="literatura/docx/1. Romeo a Julie.pdf" class="file-literatura">1. Romeo a Julie</a>  
+    </div>
+    <div class="category2 files">
+      
+      <a href="#" class="file-link">File 5</a>
+      <a href="#" class="file-link">File 6</a>
+    </div>
+    <div class="category3 files">
+      <a href="#" class="file-link">File 7</a>
+      <a href="#" class="file-link">File 8</a>
+      <a href="#" class="file-link">File 9</a>
+    </div>
+    <script src="index.js"></script>
   </body>
 </html>
