--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="#" class="file-literatura">File 2</a>
       <a href="#" class="file-literatura">File 3</a>
 	  <p class="file-docx">DOCX</p>
-	  <a href="literatura/docx/1. Romeo a Julie.pdf" class="file-literatura">1. Romeo a Julie</a>  
+	  <a href="literatura/docx/1. Romeo a Julie.docx" class="file-literatura">1. Romeo a Julie</a>  
     </div>
     <div class="category2 files">
       
