--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="category1 files">
 	  <p class="file-header">Analýza Textu</p>
 	  <a href="literatura/osnova.pdf" class="file-literatura">Osnova</a> 
-	  <a href="literatura/analyza.pdf" class="file-literatura">Pojmy (Analýza)</a> 
+	  <a href="literatura/analyza.pdf" class="file-literatura">Analýza</a> 
 	  <p class="file-spacer">PDF</p>
 	  <a href="literatura/pdf/1. Romeo a Julie.pdf" class="file-literatura">1. Romeo a Julie</a>      
       <a href="#" class="file-literatura">File 2</a>
