--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       <div class="category" onclick="showCategory('category3')">PSKV</div>
     </div>
     <div class="category1 files">
-	  <p class="file-main">Analýza Textu</p>
+	  <p class="file-pdf">Analýza Textu</p>
 	  <a href="literatura/osnova.pdf" class="file-literatura">Osnova</a> 
 	  <a href="literatura/analyza.pdf" class="file-literatura">Analýza</a> 
-	  <p class="file-second">PDF</p>
+	  <p class="file-docx">PDF</p>
 	  <a href="literatura/pdf/1. Romeo a Julie.pdf" class="file-literatura">1. Romeo a Julie</a>      
       <a href="#" class="file-literatura">File 2</a>
       <a href="#" class="file-literatura">File 3</a>
-	  <p class="file-second">DOCX</p>
+	  <p class="file-docx">DOCX</p>
 	  <a href="literatura/docx/1. Romeo a Julie.docx" class="file-literatura" download>1. Romeo a Julie</a>  
     </div>
     <div class="category2 files">
