--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 	  
 	  <p class="file-second">PDF</p>
 	  <a href="literatura/pdf/1. Romeo a Julie.pdf" class="file-literatura">1. Romeo a Julie</a> 
-	  
+	  <a href="literatura/pdf/2. Hamlet.pdf" class="file-literatura">2. Hamlet</a> 
 	  <p class="file-second">DOCX</p>
-	  <a href="literatura/docx/1. Romeo a Julie.docx" class="file-literatura" download>1. Romeo a Julie</a>  
+	  <a href="literatura/docx/1. Romeo a Julie.docx" class="file-literatura">1. Romeo a Julie</a>
+	  <a href="literatura/docx/2. Hamlet.docx" class="file-literatura">2. Hamlet</a> 	  
     </div>
     <div class="category2 files">
       
