--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 	  <p class="file-second">PDF</p>
 	  <a href="literatura/pdf/1. Romeo a Julie.pdf" class="file-literatura">1. Romeo a Julie</a> 
 	  <a href="literatura/pdf/2. Hamlet.pdf" class="file-literatura">2. Hamlet</a> 
+	  <a href="literatura/pdf/3. Revizor.pdf" class="file-literatura">3. Revizor</a> 
+	  
 	  <p class="file-second">DOCX</p>
 	  <a href="literatura/docx/1. Romeo a Julie.docx" class="file-literatura">1. Romeo a Julie</a>
-	  <a href="literatura/docx/2. Hamlet.docx" class="file-literatura">2. Hamlet</a> 	  
+	  <a href="literatura/docx/2. Hamlet.docx" class="file-literatura">2. Hamlet</a> 
+	  <a href="literatura/docx/3. Revizor.docx" class="file-literatura">3. Revizor</a> 		  
     </div>
     <div class="category2 files">
       
