--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	  <a href="literatura/osnova.pdf" class="file-literatura">Osnova</a> 
 	  <a href="literatura/analyza.pdf" class="file-literatura">Analýza</a> 
 	  
-	  <p class="file-secondMain">Rozbor Knih</p>
-	  <p class="file-second">PDF</p>
+	  <p class="file-mainSecond">Rozbor Knih</p>
+	  <p class="file-afterMainSecond">PDF</p>
 	  <a href="literatura/pdf/1. Romeo a Julie.pdf" class="file-literatura">1. Romeo a Julie</a> 
 	  <a href="literatura/pdf/2. Hamlet.pdf" class="file-literatura">2. Hamlet</a> 
 	  <a href="literatura/pdf/3. Revizor.pdf" class="file-literatura">3. Revizor</a> 
