--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -25,7 +25,9 @@
 	  <a href="literatura/pdf/4. Jáma a kyvadlo.pdf" class="file-literatura">4. Jáma a kyvadlo</a>
 	  <a href="literatura/pdf/5. Noc na Karlštejně.pdf" class="file-literatura">5. Noc na Karlštejně</a>
 	  <a href="literatura/pdf/6. Pygmalion.pdf" class="file-literatura">6. Pygmalion</a> 
-	  <a href="literatura/pdf/7. Petr a Lucie.docx" class="file-literatura">7. Petr a Lucie</a>
+	  <a href="literatura/pdf/7. Petr a Lucie.pdf" class="file-literatura">7. Petr a Lucie</a>
+	  <a href="literatura/pdf/8. Stařec a moře.pdf" class="file-literatura">8. Stařec a moře</a>
+	  <a href="literatura/pdf/9. Na západní frontě klid.pdf" class="file-literatura">9. Na západní frontě klid</a>
 	  
 	  <p class="file-second">DOCX</p>
 	  <a href="literatura/docx/1. Romeo a Julie.docx" class="file-literatura">1. Romeo a Julie</a>
@@ -35,6 +37,8 @@
 	  <a href="literatura/docx/5. Noc na Karlštejně.docx" class="file-literatura">5. Noc na Karlštejně</a>
 	  <a href="literatura/docx/6. Pygmalion.docx" class="file-literatura">6. Pygmalion</a>
 	  <a href="literatura/docx/7. Petr a Lucie.docx" class="file-literatura">7. Petr a Lucie</a>
+	  <a href="literatura/docx/8. Stařec a moře.docx" class="file-literatura">8. Stařec a moře</a>
+	  <a href="literatura/docx/9. Na západní frontě klid.docx" class="file-literatura">9. Na západní frontě klid</a>
 	  
     </div>
     <div class="category2 files">
