--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 id="header">Infis Maturita & Infis Stuff</h1>
     <div class="categories">
 	  <a href="InfisMaturita/infisMaturita.html" class="category">Maturita</a>
-	  <a href="" class="category">Programování</a>
+	  <a href="Programovani/programovani.html" class="category">Programování</a>
     </div>
     <script src="index.js"></script>
   </body>
