--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -14,8 +14,9 @@
     </div>
     <div class="category1 files">
 	  <p class="file-main">Analýza Textu</p>
-	  <a href="literatura/osnova.pdf" class="file-literatura">Osnova</a> 
-	  <a href="literatura/analyza.pdf" class="file-literatura">Analýza</a> 
+	  <a href="literatura/others/osnova.pdf" class="file-literatura">Osnova</a> 
+	  <a href="literatura/others/analyza.pdf" class="file-literatura">Analýza</a> 
+	  <a href="literatura/others/Vlastni_seznam_cetby_-_sablona.xlsx" class="file-literatura">Šablona pro odevzdání seznamu knih</a> 
 	  
 	  <p class="file-mainSecond">Rozbor Knih</p>
 	  <p class="file-afterMainSecond">PDF</p>
@@ -28,6 +29,9 @@
 	  <a href="literatura/pdf/7. Petr a Lucie.pdf" class="file-literatura">7. Petr a Lucie</a>
 	  <a href="literatura/pdf/8. Stařec a moře.pdf" class="file-literatura">8. Stařec a moře</a>
 	  <a href="literatura/pdf/9. Na západní frontě klid.pdf" class="file-literatura">9. Na západní frontě klid</a>
+	  <a href="literatura/pdf/10. R.U.R.pdf" class="file-literatura">10. R.U.R</a>
+	  <a href="literatura/pdf/11. Válka s Mloky.pdf" class="file-literatura">11. Válka s Mloky</a>
+	  <a href="literatura/pdf/12. Bylo nás pět.pdf" class="file-literatura">12. Bylo nás pět</a>
 	  
 	  <p class="file-second">DOCX</p>
 	  <a href="literatura/docx/1. Romeo a Julie.docx" class="file-literatura">1. Romeo a Julie</a>
@@ -39,6 +43,9 @@
 	  <a href="literatura/docx/7. Petr a Lucie.docx" class="file-literatura">7. Petr a Lucie</a>
 	  <a href="literatura/docx/8. Stařec a moře.docx" class="file-literatura">8. Stařec a moře</a>
 	  <a href="literatura/docx/9. Na západní frontě klid.docx" class="file-literatura">9. Na západní frontě klid</a>
+	  <a href="literatura/docx/10. R.U.R.docx" class="file-literatura">10. R.U.R</a>
+	  <a href="literatura/docx/11. Válka s Mloky.docx" class="file-literatura">11. Válka s Mloky</a>
+	  <a href="literatura/docx/12. Bylo nás pět.docx" class="file-literatura">12. Bylo nás pět</a>
 	  
     </div>
     <div class="category2 files">
