--- a/Programovani/programovani.html
+++ b/Programovani/programovani.html
@@ -19,8 +19,8 @@
 	   <a href="#" class="file-link">Blank</a>
     </div>
     <div class="category2 files">
-      <a href="3. Ročník 2021 2022/1. Opakování 2. ročníku - část 1 - 1 - 6.zip" class="file-link">Opakování 2. ročníku - část 1 - 1 - 6</a> 
-	  <a href="3. Ročník 2021 2022/2. Opakování 2. ročníku - část 1 - 7 - 12.zip" class="file-link">Opakování 2. ročníku - část 1 - 7 - 12</a> 
+      <a href="3. Ročník 2021 2022/1. Opakování 2. ročníku - část 1 - 1 - 6.zip" class="file-link">1. Opakování 2. ročníku - část 1 - 1 - 6</a> 
+	  <a href="3. Ročník 2021 2022/2. Opakování 2. ročníku - část 1 - 7 - 12.zip" class="file-link">2. Opakování 2. ročníku - část 1 - 7 - 12</a> 
 	  <a href="3. Ročník 2021 2022/3. TEST C# - konzolové aplikace 1.zip" class="file-link">3. TEST C# - konzolové aplikace 1</a> 
 	  <a href="3. Ročník 2021 2022/4. Opakování 2. ročníku - část 2 - OOP.zip" class="file-link">4. Opakování 2. ročníku - část 2 - OOP</a> 
 	  <a href="3. Ročník 2021 2022/5. Opakování 2. ročníku - část 3 - OOP.zip" class="file-link">5. Opakování 2. ročníku - část 3 - OOP</a> 
