--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -3,7 +3,7 @@
   <head>
     <title>Infis Maturita</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="infisMaturita.css">
+    <link rel="stylesheet" type="text/css" href="../index.css">
   </head>
   <body>
     <h1 id="header">Infis Maturita</h1>
@@ -13,39 +13,39 @@
       <div class="category" onclick="showCategory('category3')">PSKV</div>
     </div>
     <div class="category1 files">
-	  <p class="file-main">Analýza Textu</p>
-	  <a href="literatura/others/osnova.pdf" class="file-literatura">Osnova</a> 
-	  <a href="literatura/others/analyza.pdf" class="file-literatura">Analýza</a> 
-	  <a href="literatura/others/Vlastni_seznam_cetby_-_sablona.xlsx" class="file-literatura">Šablona pro odevzdání seznamu knih</a> 
+	  <p class="file-literatura-text-main">Analýza Textu</p>
+	  <a href="literatura/others/osnova.pdf" class="file-literatura-link">Osnova</a> 
+	  <a href="literatura/others/analyza.pdf" class="file-literatura-link">Analýza</a> 
+	  <a href="literatura/others/Vlastni_seznam_cetby_-_sablona.xlsx" class="file-literatura-link">Šablona pro odevzdání seznamu knih</a> 
 	  
-	  <p class="file-mainSecond">Rozbor Knih</p>
-	  <p class="file-afterMainSecond">PDF</p>
-	  <a href="literatura/pdf/1. Romeo a Julie.pdf" class="file-literatura">1. Romeo a Julie</a> 
-	  <a href="literatura/pdf/2. Hamlet.pdf" class="file-literatura">2. Hamlet</a> 
-	  <a href="literatura/pdf/3. Revizor.pdf" class="file-literatura">3. Revizor</a> 
-	  <a href="literatura/pdf/4. Jáma a kyvadlo.pdf" class="file-literatura">4. Jáma a kyvadlo</a>
-	  <a href="literatura/pdf/5. Noc na Karlštejně.pdf" class="file-literatura">5. Noc na Karlštejně</a>
-	  <a href="literatura/pdf/6. Pygmalion.pdf" class="file-literatura">6. Pygmalion</a> 
-	  <a href="literatura/pdf/7. Petr a Lucie.pdf" class="file-literatura">7. Petr a Lucie</a>
-	  <a href="literatura/pdf/8. Stařec a moře.pdf" class="file-literatura">8. Stařec a moře</a>
-	  <a href="literatura/pdf/9. Na západní frontě klid.pdf" class="file-literatura">9. Na západní frontě klid</a>
-	  <a href="literatura/pdf/10. R.U.R.pdf" class="file-literatura">10. R.U.R</a>
-	  <a href="literatura/pdf/11. Válka s Mloky.pdf" class="file-literatura">11. Válka s Mloky</a>
-	  <a href="literatura/pdf/12. Bylo nás pět.pdf" class="file-literatura">12. Bylo nás pět</a>
+	  <p class="file-literatura-text-main-second">Rozbor Knih</p>
+	  <p class="file-literatura-text-main-filetype">PDF</p>
+	  <a href="literatura/pdf/1. Romeo a Julie.pdf" class="file-literatura-link">1. Romeo a Julie</a> 
+	  <a href="literatura/pdf/2. Hamlet.pdf" class="file-literatura-link">2. Hamlet</a> 
+	  <a href="literatura/pdf/3. Revizor.pdf" class="file-literatura-link">3. Revizor</a> 
+	  <a href="literatura/pdf/4. Jáma a kyvadlo.pdf" class="file-literatura-link">4. Jáma a kyvadlo</a>
+	  <a href="literatura/pdf/5. Noc na Karlštejně.pdf" class="file-literatura-link">5. Noc na Karlštejně</a>
+	  <a href="literatura/pdf/6. Pygmalion.pdf" class="file-literatura-link">6. Pygmalion</a> 
+	  <a href="literatura/pdf/7. Petr a Lucie.pdf" class="file-literatura-link">7. Petr a Lucie</a>
+	  <a href="literatura/pdf/8. Stařec a moře.pdf" class="file-literatura-link">8. Stařec a moře</a>
+	  <a href="literatura/pdf/9. Na západní frontě klid.pdf" class="file-literatura-link">9. Na západní frontě klid</a>
+	  <a href="literatura/pdf/10. R.U.R.pdf" class="file-literatura-link">10. R.U.R</a>
+	  <a href="literatura/pdf/11. Válka s Mloky.pdf" class="file-literatura-link">11. Válka s Mloky</a>
+	  <a href="literatura/pdf/12. Bylo nás pět.pdf" class="file-literatura-link">12. Bylo nás pět</a>
 	  
-	  <p class="file-second">DOCX</p>
-	  <a href="literatura/docx/1. Romeo a Julie.docx" class="file-literatura">1. Romeo a Julie</a>
-	  <a href="literatura/docx/2. Hamlet.docx" class="file-literatura">2. Hamlet</a> 
-	  <a href="literatura/docx/3. Revizor.docx" class="file-literatura">3. Revizor</a>
-	  <a href="literatura/docx/4. Jáma a kyvadlo.docx" class="file-literatura">4. Jáma a kyvadlo</a> 
-	  <a href="literatura/docx/5. Noc na Karlštejně.docx" class="file-literatura">5. Noc na Karlštejně</a>
-	  <a href="literatura/docx/6. Pygmalion.docx" class="file-literatura">6. Pygmalion</a>
-	  <a href="literatura/docx/7. Petr a Lucie.docx" class="file-literatura">7. Petr a Lucie</a>
-	  <a href="literatura/docx/8. Stařec a moře.docx" class="file-literatura">8. Stařec a moře</a>
-	  <a href="literatura/docx/9. Na západní frontě klid.docx" class="file-literatura">9. Na západní frontě klid</a>
-	  <a href="literatura/docx/10. R.U.R.docx" class="file-literatura">10. R.U.R</a>
-	  <a href="literatura/docx/11. Válka s Mloky.docx" class="file-literatura">11. Válka s Mloky</a>
-	  <a href="literatura/docx/12. Bylo nás pět.docx" class="file-literatura">12. Bylo nás pět</a>
+	  <p class="file-literatura-text-second-filetype">DOCX</p>
+	  <a href="literatura/docx/1. Romeo a Julie.docx" class="file-literatura-link">1. Romeo a Julie</a>
+	  <a href="literatura/docx/2. Hamlet.docx" class="file-literatura-link">2. Hamlet</a> 
+	  <a href="literatura/docx/3. Revizor.docx" class="file-literatura-link">3. Revizor</a>
+	  <a href="literatura/docx/4. Jáma a kyvadlo.docx" class="file-literatura-link">4. Jáma a kyvadlo</a> 
+	  <a href="literatura/docx/5. Noc na Karlštejně.docx" class="file-literatura-link">5. Noc na Karlštejně</a>
+	  <a href="literatura/docx/6. Pygmalion.docx" class="file-literatura-link">6. Pygmalion</a>
+	  <a href="literatura/docx/7. Petr a Lucie.docx" class="file-literatura-link">7. Petr a Lucie</a>
+	  <a href="literatura/docx/8. Stařec a moře.docx" class="file-literatura-link">8. Stařec a moře</a>
+	  <a href="literatura/docx/9. Na západní frontě klid.docx" class="file-literatura-link">9. Na západní frontě klid</a>
+	  <a href="literatura/docx/10. R.U.R.docx" class="file-literatura-link">10. R.U.R</a>
+	  <a href="literatura/docx/11. Válka s Mloky.docx" class="file-literatura-link">11. Válka s Mloky</a>
+	  <a href="literatura/docx/12. Bylo nás pět.docx" class="file-literatura-link">12. Bylo nás pět</a>
 	  
     </div>
     <div class="category2 files">
@@ -58,6 +58,6 @@
       <a href="#" class="file-link">File 8</a>
       <a href="#" class="file-link">File 9</a>
     </div>
-    <script src="infisMaturita.js"></script>
+    <script src="../index.js"></script>
   </body>
 </html>
