--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -32,6 +32,9 @@
 	  <a href="literatura/pdf/10. R.U.R.pdf" class="file-literatura-link">10. R.U.R</a>
 	  <a href="literatura/pdf/11. Válka s Mloky.pdf" class="file-literatura-link">11. Válka s Mloky</a>
 	  <a href="literatura/pdf/12. Bylo nás pět.pdf" class="file-literatura-link">12. Bylo nás pět</a>
+	  <a href="literatura/pdf/13. Malý princ.pdf" class="file-literatura-link">13. Malý princ</a>
+	  <a href="literatura/pdf/14. Rozmarné léto.docx" class="file-literatura-link">14. Rozmarné léto</a>
+
 	  
 	  <p class="file-literatura-text-second-filetype">DOCX</p>
 	  <a href="literatura/docx/1. Romeo a Julie.docx" class="file-literatura-link">1. Romeo a Julie</a>
@@ -46,6 +49,8 @@
 	  <a href="literatura/docx/10. R.U.R.docx" class="file-literatura-link">10. R.U.R</a>
 	  <a href="literatura/docx/11. Válka s Mloky.docx" class="file-literatura-link">11. Válka s Mloky</a>
 	  <a href="literatura/docx/12. Bylo nás pět.docx" class="file-literatura-link">12. Bylo nás pět</a>
+	  <a href="literatura/docx/13. Malý princ.docx" class="file-literatura-link">13. Malý princ</a>
+	  <a href="literatura/docx/14. Rozmarné léto.docx" class="file-literatura-link">14. Rozmarné léto</a>
 	  
     </div>
     <div class="category2 files">
