--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -18,8 +18,9 @@
 	  <a href="literatura/others/analyza.pdf" class="file-literatura-link">Analýza</a> 
 	  <a href="literatura/others/Vlastni_seznam_cetby_-_sablona.xlsx" class="file-literatura-link">Šablona pro odevzdání seznamu knih</a> 
 	  
-	  <p class="file-literatura-text-main-second">Rozbor Knih</p>
-	  <p class="file-literatura-text-main-filetype">PDF</p>
+	  <p class="file-literatura-text-main-second">Rozbor Knih</p>	  
+	  <p class="file-literatura-text-main-filetype"> PDF </p>
+	  <div class="FileType1">
 	  <a href="literatura/pdf/1. Romeo a Julie.pdf" class="file-literatura-link">1. Romeo a Julie</a> 
 	  <a href="literatura/pdf/2. Hamlet.pdf" class="file-literatura-link">2. Hamlet</a> 
 	  <a href="literatura/pdf/3. Revizor.pdf" class="file-literatura-link">3. Revizor</a> 
@@ -33,10 +34,13 @@
 	  <a href="literatura/pdf/11. Válka s Mloky.pdf" class="file-literatura-link">11. Válka s Mloky</a>
 	  <a href="literatura/pdf/12. Bylo nás pět.pdf" class="file-literatura-link">12. Bylo nás pět</a>
 	  <a href="literatura/pdf/13. Malý princ.pdf" class="file-literatura-link">13. Malý princ</a>
-	  <a href="literatura/pdf/14. Rozmarné léto.docx" class="file-literatura-link">14. Rozmarné léto</a>
-
+	  <a href="literatura/pdf/14. Rozmarné léto.pdf" class="file-literatura-link">14. Rozmarné léto</a>
+	  <a href="literatura/pdf/15. Farma zvířat.pdf" class="file-literatura-link">15. Farma zvířat</a>
+	  <a href="literatura/pdf/16. Spalovač mrtvol.pdf" class="file-literatura-link">16. Spalovač mrtvol</a>
+	  </div> 
 	  
 	  <p class="file-literatura-text-second-filetype">DOCX</p>
+	  <div class="FileType2">
 	  <a href="literatura/docx/1. Romeo a Julie.docx" class="file-literatura-link">1. Romeo a Julie</a>
 	  <a href="literatura/docx/2. Hamlet.docx" class="file-literatura-link">2. Hamlet</a> 
 	  <a href="literatura/docx/3. Revizor.docx" class="file-literatura-link">3. Revizor</a>
@@ -51,6 +55,9 @@
 	  <a href="literatura/docx/12. Bylo nás pět.docx" class="file-literatura-link">12. Bylo nás pět</a>
 	  <a href="literatura/docx/13. Malý princ.docx" class="file-literatura-link">13. Malý princ</a>
 	  <a href="literatura/docx/14. Rozmarné léto.docx" class="file-literatura-link">14. Rozmarné léto</a>
+	  <a href="literatura/docx/15. Farma zvířat.docx" class="file-literatura-link">15. Farma zvířat</a>
+	  <a href="literatura/docx/16. Spalovač mrtvol.docx" class="file-literatura-link">16. Spalovač mrtvol</a>
+	  </div>
 	  
     </div>
     <div class="category2 files">
