--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="categories">
 	  <a href="InfisMaturita/infisMaturita.html" class="category">Maturita</a>
 	  <a href="Programovani/programovani.html" class="category">Programování</a>
+	  <a href="Site/site.html" class="category">Sítě</a>
     </div>
     <script src="index.js"></script>
   </body>
