--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -37,6 +37,7 @@
 	  <a href="literatura/pdf/14. Rozmarné léto.pdf" class="file-literatura-link">14. Rozmarné léto</a>
 	  <a href="literatura/pdf/15. Farma zvířat.pdf" class="file-literatura-link">15. Farma zvířat</a>
 	  <a href="literatura/pdf/16. Spalovač mrtvol.pdf" class="file-literatura-link">16. Spalovač mrtvol</a>
+	  <a href="literatura/pdf/17. Lakomec.pdf" class="file-literatura-link">17. Lakomec</a>
 	  </div> 
 	  
 	  <p class="file-literatura-text-second-filetype">DOCX</p>
@@ -57,6 +58,7 @@
 	  <a href="literatura/docx/14. Rozmarné léto.docx" class="file-literatura-link">14. Rozmarné léto</a>
 	  <a href="literatura/docx/15. Farma zvířat.docx" class="file-literatura-link">15. Farma zvířat</a>
 	  <a href="literatura/docx/16. Spalovač mrtvol.docx" class="file-literatura-link">16. Spalovač mrtvol</a>
+	  <a href="literatura/docx/17. Lakomec.docx" class="file-literatura-link">17. Lakomec</a>
 	  </div>
 	  
     </div>
