--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -14,13 +14,13 @@
     </div>
     <div class="category1 files">
 	  <p class="file-literatura-text-main">Analýza Textu</p>
-	  <a href="literatura/others/osnova.pdf" class="file-literatura-link">Osnova</a> 
+	  <a href="literatura/others/literaturaOsnova.pdf" class="file-literatura-link">Osnova</a> 
 	  <a href="literatura/others/analyza.pdf" class="file-literatura-link">Analýza</a> 
 	  <a href="literatura/others/Vlastni_seznam_cetby_-_sablona.xlsx" class="file-literatura-link">Šablona pro odevzdání seznamu knih</a> 
 	  
 	  <p class="file-literatura-text-main-second">Rozbor Knih</p>	  
 	  <p class="file-literatura-text-main-filetype"> PDF </p>
-	  <div class="FileType1">
+	  <div class="maturitaLiteraturaFileType1">
 	  <a href="literatura/pdf/1. Romeo a Julie.pdf" class="file-literatura-link">1. Romeo a Julie</a> 
 	  <a href="literatura/pdf/2. Hamlet.pdf" class="file-literatura-link">2. Hamlet</a> 
 	  <a href="literatura/pdf/3. Revizor.pdf" class="file-literatura-link">3. Revizor</a> 
@@ -41,7 +41,7 @@
 	  </div> 
 	  
 	  <p class="file-literatura-text-second-filetype">DOCX</p>
-	  <div class="FileType2">
+	  <div class="maturitaLiteraturaFileType2">
 	  <a href="literatura/docx/1. Romeo a Julie.docx" class="file-literatura-link">1. Romeo a Julie</a>
 	  <a href="literatura/docx/2. Hamlet.docx" class="file-literatura-link">2. Hamlet</a> 
 	  <a href="literatura/docx/3. Revizor.docx" class="file-literatura-link">3. Revizor</a>
@@ -62,10 +62,26 @@
 	  </div>
 	  
     </div>
-    <div class="category2 files">
-      
-      <a href="#" class="file-link">File 5</a>
-      <a href="#" class="file-link">File 6</a>
+    <div class="category2 files">  
+	<p class="file-it-text-main">Ostatní</p>
+	  <a href="it/others/itOsnova.pdf" class="file-literatura-link">Osnova</a> 
+	  
+	  <p class="file-it-text-main-second">Otázky</p>	  
+	  <p class="file-it-text-main-filetype"> PDF </p>
+	  <div class="maturitaItFileType1">
+	  <a href="it/pdf/1. Základní počítačové komponenty.pdf" class="file-it-link">1. Základní počítačové komponenty</a>
+	  <a href="it/docx/2. Periferní zařízení.docx" class="file-it-link">2. Periferní zařízení</a> 	  
+
+	  </div> 
+	  
+	  <p class="file-it-text-second-filetype">DOCX</p>
+	  <div class="maturitaItFileType2">
+	  <a href="it/docx/1. Základní počítačové komponenty.docx" class="file-it-link">1. Základní počítačové komponenty</a> 
+	  <a href="it/docx/2. Periferní zařízení.docx" class="file-it-link">2. Periferní zařízení</a> 
+
+	  </div>
+	  
+    </div>
     </div>
     <div class="category3 files">
       <a href="#" class="file-link">File 7</a>
