--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -70,7 +70,7 @@
 	  <p class="file-it-text-main-filetype"> PDF </p>
 	  <div class="maturitaItFileType1">
 	  <a href="it/pdf/1. Základní počítačové komponenty.pdf" class="file-it-link">1. Základní počítačové komponenty</a>
-	  <a href="it/docx/2. Periferní zařízení.docx" class="file-it-link">2. Periferní zařízení</a> 	  
+	  <a href="it/pdf/2. Periferní zařízení.docx" class="file-it-link">2. Periferní zařízení</a> 	  
 
 	  </div> 
 	  
