--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	  <a href="InfisMaturita/infisMaturita.html" class="category">Maturita</a>
 	  <a href="Programovani/programovani.html" class="category">Programování</a>
 	  <a href="Site/site.html" class="category">Sítě</a>
+	  <a href="Ostatni/ostatni.html" class="category">Ostatní</a>
     </div>
     <script src="index.js"></script>
   </body>
