--- a/Ostatni/ostatni.html
+++ b/Ostatni/ostatni.html
@@ -8,15 +8,14 @@
   <body>
     <h1 id="header">Infis Ostatní</h1>
 	<h2 class="programovani-header-text">Zde nalezneš užitečné odkazy</h2>
-	<a href="https://chat.openai.com" class="programovani-header-chatGpt">ChatGPT</a>
+	
 	
     <div class="categories">
       <div class="category" onclick="showCategory('category1')">Linky</div>
-      <div class="category" onclick="showCategory('category2')"></div>
-      <div class="category" onclick="showCategory('category3')"></div>
     </div>
     <div class="category1 files">
 	   <a href="https://bakalari.ssinfis.cz/Timetable/Public/Actual/Class/Y9" class="file-programovani-link">Lepší Bakaláři</a>
+	   <a href="https://chat.openai.com" class="file-programovani-link">ChatGPT</a>
     </div>
     <div class="category2 files">
 
